--- a/index.jade
+++ b/index.jade
@@ -201,10 +201,8 @@ html
             a(href='http://www.brandmakers.com/' target='_blank')
               img(src='brandmakers.png' id='brandmakers' class='sp')
           .col-sm-6
-            a(href='https://ibm.com/' target='_blank')
-              img(src='ibm.png' id='ibm' class='sp')
-            br
-            small(style='font-size:8px') IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.
+            a(href='https://skillflow.io/' target='_blank')
+              img(src='skillflow.png' id='skillflow')
         br
         br
         .row.text-center.text-center
@@ -214,6 +212,15 @@ html
           .col-sm-6
             a(href='https://www.twilio.com/' target='_blank')
               img(src='twilio.png' id='twilio' class='sp')
+        br
+        br
+        .row.tex-center.text-center
+          .col-sm-3
+          .col-sm-6
+            a(href='https://ibm.com/' target='_blank')
+              img(src='ibm.png' id='ibm' class='sp')
+            br
+            small(style='font-size:8px') IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.
         br
         br
         .row.text-center.text-center
