--- a/index.jade
+++ b/index.jade
@@ -128,8 +128,8 @@ html
                   td 12:00 PM
                   td Lunch
                 tr
-                  td 1:00 PM
-                  td Intro to iOS Workshop
+                  td 12:30 PM
+                  td Intro to Programming Workshop
                 tr
                   td 2:00 PM
                   td Intermediate iOS Workshop
