--- a/index.jade
+++ b/index.jade
@@ -143,14 +143,17 @@ html
                   td 3:00 PM
                   td Intro to Git Workshop
                 tr
+                  td 3:30 PM
+                  td Realtime Data Visualization Workshop
+                tr
                   td 4:00 PM
                   td Particle.io Workshop
                 tr
-                  td 4:00 PM
-                  td Realtime Data Visualization Workshop
-                tr
                   td 5:00 PM
                   td Scenera Workshop
+                tr
+                  td 5:00 PM
+                  td Data Visualization with JavaScript Workshop
                 tr
                   td 6:30 PM
                   td Dinner
@@ -242,10 +245,10 @@ html
             p GoPro - HERO Session HD, 1 year of #[a(href='http://www.wolfram.com/development-platform') Wolfram Development Platform], 1 year of #[a(href='http://www.wolfram.com/solutions/education/students') Wolfram Mathematica Student Edition], 1 year of #[a(href='http://www.wolframalpha.com/pro/') Wolfram|Alpha Pro] and a #[a(href='https://www.justinmind.com/') Justinmind] perpetual license, one for each team member.
           .col-sm-4
             h3 2nd Place
-            p Bose Soundlink Color Bluetooth Speaker, 1 year of #[a(href='http://www.wolfram.com/development-platform') Wolfram Development Platform], 1 year of #[a(href='http://www.wolfram.com/solutions/education/students') Wolfram Mathematica Student Edition], 1 year of #[a(href='http://www.wolframalpha.com/pro/') Wolfram|Alpha Pro] and a #[a(href='https://www.justinmind.com/') Justinmind] perpetual license, one for each team member.
+            p Google Home, 1 year of #[a(href='http://www.wolfram.com/development-platform') Wolfram Development Platform], 1 year of #[a(href='http://www.wolfram.com/solutions/education/students') Wolfram Mathematica Student Edition], 1 year of #[a(href='http://www.wolframalpha.com/pro/') Wolfram|Alpha Pro] and a #[a(href='https://www.justinmind.com/') Justinmind] perpetual license, one for each team member.
           .col-sm-4
             h3 3rd Place
-            p Syma X5C Explorers 2.4Ghz 6-Axis Gyro RC quadcopter Drone w/ 2MP HD Camera, 1 year of #[a(href='http://www.wolfram.com/development-platform') Wolfram Development Platform], 1 year of #[a(href='http://www.wolfram.com/solutions/education/students') Wolfram Mathematica Student Edition] and 1 year of #[a(href='http://www.wolframalpha.com/pro/') Wolfram|Alpha Pro], one for each team member.
+            p Bose Soundlink Color Bluetooth Speaker, 1 year of #[a(href='http://www.wolfram.com/development-platform') Wolfram Development Platform], 1 year of #[a(href='http://www.wolfram.com/solutions/education/students') Wolfram Mathematica Student Edition] and 1 year of #[a(href='http://www.wolframalpha.com/pro/') Wolfram|Alpha Pro], one for each team member.
         .row
           .col-sm-4
             h3 Best iOS App
@@ -254,17 +257,17 @@ html
             h3 Best Android App
             p Partial scholarship to #[a(href='https://www.makeschool.com/') Make School Summer Academy], Particle Kit and Amazon Echo Dot, one for each team member.
           .col-sm-4
-            h3 Best #[a(href='http://get.tech/') .tech] Domain Name
-            p $50 Amazon gift card, one for each team member. 
+            h3 Best Web App
+            p Insignia Bluetooth Speaker, one for each team member. 
         .row
           .col-sm-4
             h3 Top 10 Teams
             p 1 year subscription to #[a(href='http://www.wolframalpha.com/pro/') Wolfram|Alpha Pro], one for each team member. First, second and third place winners are not eligible for this award. 
           .col-sm-4
-            h3 Raffle Prizes
-            p One iPad Mini 4, one Roku 3 Streaming Player and two #[a(href='https://www.justinmind.com/') Justinmind] perpetual licenses.
+            h3 Raffle/Other Prizes
+            p One iPad Mini 4, one Roku 3 Streaming Player, four Syma X5C Explorers 2.4Ghz 6-Axis Gyro RC quadcopter Drones with 2MP HD Camera and two #[a(href='https://www.justinmind.com/') Justinmind] perpetual licenses.
           .col-sm-4
-            h1 $12,153
+            h1 $15,457
             p#cash Total cash value of prizes
     #sponsors.content
       .container
