--- a/index.jade
+++ b/index.jade
@@ -39,7 +39,7 @@ html
               h3 San Mateo's first <b>high school</b> hackathon!
               p.lead January 14-15, 2017 @ <a href='https://www.google.com/maps/place/Informatica+Corporation/@37.5111227,-122.2051784,15z/data=!4m5!3m4!1s0x0:0xc479e59839708591!8m2!3d37.5111227!4d-122.2051784' target='_blank'>Informatica</a>
               // a.btn.btn-default.btn-lg(data-toggle='modal' data-target='#m') Sign up now!
-              a.btn.btn-default.btn-lg(href='https://slack.smhacks.com' target='_blank') Join our Slack!
+              a.btn.btn-default.btn-lg(href='http://slack.smhacks.com' target='_blank') Join our Slack!
               br
               br
               p Attendees must complete #[a(href='https://www.hellosign.com/s/bf714f6b') this waiver] before arriving
@@ -194,8 +194,8 @@ html
               .name Zach Latta
               .role Executive Director, Hack Club
           .col-sm-4
-              .name Tom Preston-Werner
-              .role Co-Founder, Github
+              .name Mike McDonald
+              .role Product Manager, Google
           .col-sm-4
               .name Oliver Belanger
               .role Hackathon Coordinator, 42 University
@@ -222,7 +222,7 @@ html
               .role Software Engineer, Uber
           .col-sm-4
               .name Lizzie Siegle
-              .role Student, Bryn Mawr College
+              .role Developer Evangelist, PubNub
         br
         br
         .row.text-center
@@ -231,8 +231,8 @@ html
               .name Giovanni Tenorio
               .role Software Engineer, Hewlett Packard
           .col-sm-4
-              .name Mike McDonald
-              .role Product Manager, Google
+              .name Vivian Shen
+              .role Student, Columbia University
     #prizes.content
       .container
         h2.text-center Prizes
